k8s/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: davidlondo/the-booking-project:booking
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8002
          resources:
            requests:
              cpu: 150m
              memory: 192Mi
            limits:
              cpu: 700m
              memory: 768Mi
          readinessProbe:
            tcpSocket:
              port: 8002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - name: http
      port: 8002
      targetPort: 8002
