k8s/business-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: business-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: business-service
  template:
    metadata:
      labels:
        app: business-service
    spec:
      containers:
        - name: business-service
          image: davidlondo/the-booking-project:business
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: business-service
spec:
  selector:
    app: business-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
